--- a/Assignment2/.gitignore
+++ b/Assignment2/.gitignore
@@ -1,6 +1,9 @@
-.terraform/
-*.tfstate
-*.tfstate.backup
+# Terraform
+**/.terraform/
+**/*.tfstate
+**/*.tfstate.backup
+**/.terraform.lock.hcl
 *.tfvars
-.terraform.lock.hcl
-terraform.tfvars
+
+# Docker images
+*.tar
